/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";
// The conventional 'package' option and the 'java_package' options are defined.
// In java projects, 'java_package' option overrides 'package'.
// See https://developers.google.com/protocol-buffers/docs/reference/java-generated
package p2p.proto;
option java_package = "org.misq.p2p.proto";
option java_multiple_files = true;

message PeersRequest {
    NodeAddress senderNodeAddress = 1;
}

message PeersResponse {
    repeated Peer reportedPeers = 1;
}

message NodeAddress {
    string hostName = 1;
    int32 port = 2;
}

message Peer {
    NodeAddress nodeAddress = 1;
    int64 date = 2;
}
